# cv_fneira

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  build.py  build_cv_docx.py  build_template_docx.py  build_template_docx_bonito.py  clean.py  download_fonts.py  pyproject.toml  requirements.txt
.claude/: settings.json
data/: competencias.yaml  cursos.yaml  educacion.yaml  experiencia.yaml  idiomas.yaml  perfil.yaml  publicaciones.yaml  referencias.yaml
graphify-out/: GRAPH_REPORT.md  cost.json  graph.json
old_cv/: full_cronologia.md  full_cursos.md  full_experience.md
output/: CV_FernandoNeira_CIREN.docx
template_ciren/: template_ciren.docx  template_ciren_blank.docx
templates/: _preamble.tex.j2  cv-ats.tex.j2  cv-exec.tex.j2  cv-full.tex.j2
templates/styles/: default.j2  simple.j2
